@@ -10,6 +10,7 @@ modules (and its dependencies):
    XML::Parser::Lite::Tree;
    Image::Magick
    LWP::UserAgent
+   Locale::gettext
 
 INSTALLATION
 
