@@ -1,0 +1,5 @@
+char *s = N_("<b>This program requires your authorization before it can upload your photos to Flickr.</b>");
+char *s = N_("<small>You must be connected to the Internet in order to authorize this program.</small>");
+char *s = N_("Authorizing is a simple process wich takes place in your web browser. When you're finished, return to this window to complete authorization and begin using <i>nautilus-flickr-uploader</i>.");
+char *s = N_("Nautilus Flicker Uploader - Flickr Authentication");
+char *s = N_("_Next");
