@@ -4,7 +4,7 @@
 <glade-interface>
 
 <widget class="GtkDialog" id="UploadDialog">
-  <property name="width_request">500</property>
+  <property name="width_request">520</property>
   <property name="height_request">340</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">Upload Photos to Flickr</property>
@@ -136,7 +136,7 @@
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
-				  <property name="expand">False</property>
+				  <property name="expand">True</property>
 				  <property name="fill">True</property>
 				</packing>
 			      </child>
@@ -558,7 +558,7 @@
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
-				  <property name="expand">True</property>
+				  <property name="expand">False</property>
 				  <property name="fill">True</property>
 				</packing>
 			      </child>
